# stm32f0xx-hal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  memory.x  openocd.cfg  openocd_program.sh
.cargo/: config.toml
.github/: bors.toml
.github/workflows/: ci.yml  clippy.yml
examples/: adc_values.rs  blinky.rs  blinky_adc.rs  blinky_delay.rs  blinky_multiple.rs  blinky_timer.rs  blinky_timer_irq.rs  dac.rs  defmt.rs  flash_read_write.rs  flash_systick.rs  flash_systick_fancier.rs  i2c_find_address.rs  i2c_hal_ina260reader.rs  i2c_hal_ina260serial.rs  i2c_hal_ssd1306alphabeter.rs  i2c_slave.rs  led_hal_button_irq.rs  pwm.rs  pwm_complementary.rs  serial_echo.rs  serial_echo_irq.rs  serial_spi_bridge.rs  serial_stopwatch.rs  spi_hal_apa102c.rs  unused.rs  usb_serial.rs  watchdog.rs
src/: adc.rs  can.rs  dac.rs  delay.rs  dma.rs  flash.rs  gpio.rs  i2c.rs  i2c_slave.rs  lib.rs  pin_mappings.rs  prelude.rs  pwm.rs  rcc.rs  serial.rs  signature.rs  spi.rs  time.rs  timers.rs  tsc.rs  usb.rs  watchdog.rs
tools/: capture_example_bloat.sh  capture_nightly_example_bloat.sh  check.py
